variable file updated

--- a/scss/abstract/_variables.scss
+++ b/scss/abstract/_variables.scss
@@ -7,8 +7,8 @@ $color-bgheadbtn: hsl(0, 0%, 95%);
 
 $fs-body: 0.9375rem; // 15px
 
-$ff-body: "lexend deca";
-$ff-heading: "big shoulders display";
+$ff-body: "lexend deca", sans-serif;
+$ff-heading: "big shoulders display", sans-serif;
 
 $fw-body: 400;
 $fw-heading: 700;
