--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -12,6 +12,7 @@ body {
   &--heading {
     font-family: $ff-heading;
     color: $color-bgheadbtn;
+    font-size: 2.5rem;
 
     text-transform: uppercase;
   }
