changes in html and css

--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -6,6 +6,7 @@
   border-radius: 30px;
   font-family: $ff-body;
   font-weight: $fw-body;
+  text-decoration: none;
 
   &:hover {
     background-color: transparent;
