--- a/css/style.css
+++ b/css/style.css
@@ -6,11 +6,11 @@
   box-sizing: border-box; }
 
 body {
+  min-height: 100vh;
   margin: 2rem; }
 
 @media (min-width: 62.5rem) {
   body {
-    height: 100vh;
     margin: 0; } }
 
 body {
@@ -37,7 +37,8 @@ body {
   padding: 1rem 2.3rem;
   border-radius: 30px;
   font-family: "lexend deca", sans-serif;
-  font-weight: 400; }
+  font-weight: 400;
+  text-decoration: none; }
   .btn:hover {
     background-color: transparent;
     border: 2px solid #f2f2f2;
