--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -7,12 +7,12 @@
 }
 
 body {
+  min-height: 100vh;
   margin: 2rem;
 }
 
 @media (min-width: 62.5rem) {
   body {
-    height: 100vh;
     margin: 0;
   }
 }
